# modelfind

./: README.md  pyproject.toml
src/modelfind/: _automl.py  api.py  repository.py
