[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "modelfind"
version = "0.1.0"
authors = [
  { name="Maksim Aliev", email="imaxaliev@gmail.com" },
]
readme = "README.md"
description = "Library for automated modelling on tabular data."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license= "Apache-2.0"
license-files = ["LICENSE"]

# TODO: group dependencies.
dependencies = [
    "autogluon-tabular[all, skex,realmlp,tabicl,tabpfn,tabdpt]==1.5.0",
    "h2o==3.46.0.9",
    "imbalanced-learn==0.14.1",
    "openml==0.15.1",
    "numpy",
    "pandas",    
    "loguru",
    "ipython",
]

[project.urls]
Homepage = "https://github.com/MaximAliev/modelbest"

[dependency-groups]
dev = [
    "install-jdk==1.1.0",
    "pytest",
    "pyqt5",
    "matplotlib",
    "twine"
]
